8.apr (tb)
      - update Portuguese translation and instruments by José Luciano Batista Gomes
      - update Dutch translation by Jaap Plaisier
7.apr (ws)
      - added two new clefs, reordered clef list
      - make saved files readable by all
      - forgot to update ppitch in Note() when changing accidental
6.apr (ws)
      - fix improper vertical note alignment for whole note chords
      - fix ledger line len for chords with displaced note heads
      - more translatable text (symbol names, element names and more)
      (tb)
      - first commit of Norwegian translation by daghenningsorbo
5.apr (ws)
      - import midi: copyright text
      - midi import fixes
      - midi implementation of simple dynamics
      - fix regression: pasted noted do not playback
      - fix regression: editing of chord names
4.apr (lv)
      - MusicXML handling of meta-data
      (ws)
      - add accidental-note distance and accidental-accidental distance to style
      - reworked accidental layout; better algorithm for accidentals at chords
      - fix custom palette creation
      (tb)
      - update Dutch translation by Jaap Plaisier
      - update French translation by JLWaltener
3.apr (lv)
      - MusicXML export of credits
      (ws)
      - add default spatium value for new scores to preferences
      - fix: ledger lines wrong for rest in voice2
      - fix: position of slider in play panel
      - fix: playback range does not consider octave markings
      - playback of notes during editing now honors ottava brackets
      - extended instruments list from Magnus Johansson
      - fix shortcut list (preferences)
      - fix style setting of stem direction in multi voice context
      - more clean implementation of play repeats
1.apr (ws)
      - fix: layout position of rests in small staff
30.mar (ws)
      - fix for multi measure rests and volta brackets
      - handle octave transposition as special case: do not respell, keep user set
        accidentals